server/compilers/goLiteJS/src/test/ml2/valid/shortdecl1.go
// short declarations of base types
package main

func main() {
    n, x, p, a, s := 23, 23.0, true, 'a', "asdf"
}
