server/compilers/goLiteJS/src/test/ml2/invalid/binary19.go
// invalid >= types
package main

func main() {
    _ = 'a' >= "asdf"
}
